# Adjoint-QM

./: .gitignore  Agents.md  README.md  pyproject.toml
codex code reasoning/: codex notes.tex
notebooks/: harmonic_oscillator_ground_state.ipynb  su2_adjoint_ground_state.ipynb
references/: README.md
results/: su2_adjoint_benchmarks.json  su3_adjoint_benchmarks.json  sun_adjoint_hmc_neural_su4_g1_1000.json  sun_adjoint_hmc_neural_su4_g1_1000.pt  sun_adjoint_hmc_neural_su4_g1_1000_hmc_eval_100x1000.json  sun_adjoint_hmc_neural_su4_g1_1000_hmc_eval_25chain_error_1000trans_warmup120.json  sun_adjoint_hmc_neural_su4_g1_1000_hmc_eval_25chains_1000trans_1rep.json  sun_adjoint_hmc_neural_su4_g1_1000_hmc_eval_25chains_1000trans_1rep_warmup120.json  sun_adjoint_hmc_neural_su4_g1_1000_hmc_eval_50chain_error_2000trans_warmup120.json  sun_adjoint_hmc_neural_su4_g1_1000_hmc_eval_50chain_error_2000trans_warmup120_stepscale010.json  sun_adjoint_hmc_neural_su4_g1_1000_rqmc_eval.json  sun_adjoint_hmc_neural_su4_g1_1000_rqmc_eval_100x1000.json  sun_adjoint_hmc_neural_su4_g1_1000_rqmc_eval_latest.json  sun_adjoint_hmc_neural_su4_g1_300.json  sun_adjoint_hmc_neural_su4_g1_300.pt  sun_adjoint_vmc_benchmarks.json  sun_adjoint_vmc_benchmarks_linear_init_regularized_smoke.json  sun_adjoint_vmc_benchmarks_long_probe.json  sun_adjoint_vmc_benchmarks_smoke.json  sun_adjoint_vmc_benchmarks_su234_sigma1.json  sun_adjoint_vmc_benchmarks_su234_validated.json  sun_adjoint_vmc_benchmarks_su23_current_validated.json  sun_adjoint_vmc_benchmarks_su23_instruction_linear_validated.json  (+53 more)
(+33 files in other folders)
