[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adjoint-qm"
version = "0.1.0"
description = "Neural variational benchmarks for quantum mechanics models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "matplotlib>=3.8",
  "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
